<resources>
    <string name="app_name">Musikmacher</string>
    <string name="start_practice">Let\'s get started with your practice session for today</string>
    <string name="start_button">Start</string>
    <string name="welcome">Welcome to Musikmacher!</string>
    <string name="start_button_alt">Play Button</string>
    <string name="no_sessions">No practice sessions recorded yet :(</string>
    <string name="recent_sessions_header">Your recent practice sessions</string>
    <string name="delete">Delete</string>
</resources>