<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.training.TrainingFragment">

    <data>
        <variable
            name="viewModel"
            type="de.freedeebee.musikmacher.ui.training.TrainingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/primaryColor">

                <TextView
                    android:id="@+id/headline_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/welcome"
                    android:textSize="24sp"
                    android:layout_marginBottom="32dp"/>

                <TextView
                    android:id="@+id/start_training_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_practice"
                    android:textColor="@color/primaryTextColor"/>

            </LinearLayout>
            <ImageButton
                android:id="@+id/start_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="32dp"
                android:src="@drawable/ic_baseline_play_arrow_24"
                android:background="@drawable/circle"
                android:text="@android:string/ok"
                android:tint="#000"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:contentDescription="@string/start_button_alt"
                android:onClick="@{() -> viewModel.toggleTraining()}"/>

            <ImageButton
                android:id="@+id/stop_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="32dp"
                android:src="@drawable/ic_baseline_pause_24"
                android:background="@drawable/circle"
                android:text="@android:string/ok"
                android:tint="#000"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:contentDescription="@string/start_button_alt"
                android:onClick="@{() -> viewModel.toggleTraining()}"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/recent_sessions_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/session_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            <TextView
                android:id="@+id/nothing_tracked_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_sessions" />

        </LinearLayout>

    </LinearLayout>
</layout>
